# Project

./: Board.cpp  Board.h  CMakeLists.txt  ComputerPlayer.cpp  ComputerPlayer.h  ConsoleDisplay.cpp  ConsoleDisplay.h  Display.h  GameRunner.cpp  GameRunner.h  HumanPlayer.cpp  HumanPlayer.h  Player.cpp  Player.h  RegularRules.cpp  Rules.cpp  Rules.h  main.cpp
exe/: Configuration
src/: Board.cpp  Board.h  ComputerPlayer.cpp  ComputerPlayer.h  ConfigurationFileHandler.cpp  ConfigurationFileHandler.h  ConsoleDisplay.cpp  ConsoleDisplay.h  Display.cpp  Display.h  GameLauncher.cpp  GameLauncher.h  GameRunner.cpp  HumanPlayer.cpp  HumanPlayer.h  Menu.cpp  Menu.h  OnlineHumanPlayer.cpp  OnlineHumanPlayer.h  Player.cpp  Player.h  Point.cpp  Point.h  RegularRules.cpp  RegularRules.h  RemotePlayer.cpp  RemotePlayer.h  Rules.cpp  Rules.h  main.cpp
tests/: BoardTest.cpp  ComputerPlayerTest.cpp  ConfigurationFileHandlerTest.cpp  HumanPlayerTest.cpp  MenuTest.cpp  PlayerTest.cpp  RulesTest.cpp  gtest_main.cpp
